esp8266 config based on 0.9.8

--- a/platformio.ini
+++ b/platformio.ini
@@ -54,7 +54,7 @@ extra_configs =
 ;default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-t-beam
 ;default_envs = heltec_wifi_lora_32
-;default_envs = nodemcuv2-rf
+default_envs = nodemcuv2-rf
 ;default_envs = nodemcuv2-rf-cc1101
 ;default_envs = nodemcuv2-somfy-cc1101
 ;default_envs = rf-wifi-gateway
@@ -777,11 +777,20 @@ lib_deps =
   ${com-esp.lib_deps}
   ${libraries.rc-switch}
   ${libraries.esp8266_mdns}
+  ${libraries.unifiedsensor}
+  ${libraries.dht}
 build_flags =
   ${com-esp.build_flags}
   '-DZgatewayRF="RF"'
+  '-DZsensorDHT="DHT"'
+  '-DZsensorHCSR501="HCSR501"'
   '-DGateway_Name="OpenMQTTGateway_ESP8266_RF"'
 board_build.flash_mode = dout
+upload_protocol = espota
+upload_port = 192.168.3.154
+upload_flags =
+  --auth=OTAPASSWORD
+  --port=8266
 
 [env:nodemcuv2-rf-cc1101]
 platform = ${com.esp8266_platform}
