esp32 1st config based on 0.9.8

--- a/platformio.ini
+++ b/platformio.ini
@@ -40,7 +40,7 @@ extra_configs =
 ;default_envs = esp32dev-weatherstation
 ;default_envs = esp32dev-gf-sun-inverter
 ;default_envs = esp32dev-ir
-;default_envs = esp32dev-ble
+default_envs = esp32dev-ble
 ;default_envs = esp32dev-ble-cont
 ;default_envs = esp32feather-ble
 ;default_envs = esp32-lolin32lite-ble
@@ -352,12 +352,26 @@ board_build.partitions = min_spiffs.csv
 lib_deps =
   ${com-esp.lib_deps}
   ${libraries.ble}
+  ${libraries.rc-switch}
+  ${libraries.unifiedsensor}
+  ${libraries.dht}
+  ;${libraries.irremoteesp}
 build_flags =
   ${com-esp.build_flags}
   '-DZgatewayBT="BT"'
+  '-DZgatewayRF="RF"'
   '-DLED_SEND_RECEIVE=2'
   '-DLED_SEND_RECEIVE_ON=0'
-  '-DGateway_Name="OpenMQTTGateway_ESP32_BLE"'
+  '-DZsensorDHT="DHT"'
+  '-DZactuatorONOFF="ONOFF"'
+  '-DZsensorHCSR501="HCSR501"'
+  '-DGateway_Name="OpenMQTTGateway"'
+  ;'-DZgatewayIR="IR"'
+upload_protocol = espota
+upload_port = 192.168.3.5
+upload_flags =
+  --auth=OTAPASSWORD
+  --port=8266
 
 [env:esp32dev-ble-cont]
 platform = ${com.esp32_platform}
