--- a/platformio.ini
+++ b/platformio.ini
@@ -784,6 +784,7 @@ build_flags =
   '-DZgatewayRF="RF"'
   '-DZsensorDHT="DHT"'
   '-DZsensorHCSR501="HCSR501"'
+  '-DZsensorADC="ADC"'
   '-DGateway_Name="OpenMQTTGateway_ESP8266_RF"'
 board_build.flash_mode = dout
 upload_protocol = espota
