--- a/platformio.ini
+++ b/platformio.ini
@@ -775,20 +775,20 @@ platform = ${com.esp8266_platform}
 board = nodemcuv2
 lib_deps =
   ${com-esp.lib_deps}
-  ${libraries.rc-switch}
+  ; ${libraries.rc-switch}
   ${libraries.esp8266_mdns}
-  ${libraries.unifiedsensor}
-  ${libraries.dht}
+  ; ${libraries.unifiedsensor}
+  ; ${libraries.dht}
 build_flags =
   ${com-esp.build_flags}
-  '-DZgatewayRF="RF"'
-  '-DZsensorDHT="DHT"'
-  '-DZsensorHCSR501="HCSR501"'
+  ; '-DZgatewayRF="RF"'
+  ; '-DZsensorDHT="DHT"'
+  ; '-DZsensorHCSR501="HCSR501"'
   '-DZsensorADC="ADC"'
-  '-DGateway_Name="OpenMQTTGateway_ESP8266_RF"'
+  '-DGateway_Name="OpenMQTTGateway_ESP8266_2"'
 board_build.flash_mode = dout
 upload_protocol = espota
-upload_port = 192.168.3.154
+upload_port = 192.168.3.230
 upload_flags =
   --auth=OTAPASSWORD
   --port=8266
