--- a/platformio.ini
+++ b/platformio.ini
@@ -775,17 +775,16 @@ platform = ${com.esp8266_platform}
 board = nodemcuv2
 lib_deps =
   ${com-esp.lib_deps}
-  ; ${libraries.rc-switch}
+   ${libraries.rc-switch}
   ${libraries.esp8266_mdns}
   ; ${libraries.unifiedsensor}
   ; ${libraries.dht}
 build_flags =
   ${com-esp.build_flags}
-  ; '-DZgatewayRF="RF"'
+   '-DZgatewayRF="RF"'
   ; '-DZsensorDHT="DHT"'
   ; '-DZsensorHCSR501="HCSR501"'
-  '-DZsensorADC="ADC"'
-  '-DGateway_Name="OpenMQTTGateway_ESP8266_2"'
+  '-DGateway_Name="OpenMQTTGateway_ESP_02"'
 board_build.flash_mode = dout
 upload_protocol = espota
 upload_port = 192.168.3.230
