--- a/platformio.ini
+++ b/platformio.ini
@@ -782,12 +782,11 @@ lib_deps =
 build_flags =
   ${com-esp.build_flags}
    '-DZgatewayRF="RF"'
-  ; '-DZsensorDHT="DHT"'
-  ; '-DZsensorHCSR501="HCSR501"'
+  '-DZactuatorPWM="PWM"'
   '-DGateway_Name="OpenMQTTGateway_ESP_02"'
 board_build.flash_mode = dout
 upload_protocol = espota
-upload_port = 192.168.3.230
+upload_port = 192.168.3.239
 upload_flags =
   --auth=OTAPASSWORD
   --port=8266
