--- a/platformio.ini
+++ b/platformio.ini
@@ -54,7 +54,7 @@ extra_configs =
 ;default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-t-beam
 ;default_envs = heltec_wifi_lora_32
-;default_envs = nodemcuv2-rf
+default_envs = nodemcuv2-rf
 ;default_envs = nodemcuv2-rf-cc1101
 ;default_envs = nodemcuv2-somfy-cc1101
 ;default_envs = rf-wifi-gateway
@@ -772,16 +772,27 @@ board_build.flash_mode = dout
 
 [env:nodemcuv2-rf]
 platform = ${com.esp8266_platform}
-board = nodemcuv2
+board = esp_wroom_02
 lib_deps =
   ${com-esp.lib_deps}
-  ${libraries.rc-switch}
+   ${libraries.rc-switch}
   ${libraries.esp8266_mdns}
+  ; ${libraries.unifiedsensor}
+  ; ${libraries.dht}
 build_flags =
   ${com-esp.build_flags}
-  '-DZgatewayRF="RF"'
-  '-DGateway_Name="OpenMQTTGateway_ESP8266_RF"'
+   '-DZgatewayRF="RF"'
+  '-DZactuatorPWM="PWM"'
+  '-DZactuatorONOFF="ONOFF"'
+  '-DZsensorGPIOInput="GPIOInput"'
+  '-DGateway_Name="OpenMQTTGateway_ESP_02"'
 board_build.flash_mode = dout
+; upload_protocol = esptool
+upload_protocol = espota
+upload_port = 192.168.3.12
+upload_flags =
+  --auth=OTAPASSWORD
+  --port=8266
 
 [env:nodemcuv2-rf-cc1101]
 platform = ${com.esp8266_platform}
