--- a/platformio.ini
+++ b/platformio.ini
@@ -364,11 +364,11 @@ build_flags =
   '-DLED_SEND_RECEIVE_ON=0'
   '-DZsensorDHT="DHT"'
   '-DZactuatorONOFF="ONOFF"'
-  '-DZsensorHCSR501="HCSR501"'
+  '-DZsensorGPIOInput="GPIOInput"'
   '-DGateway_Name="OpenMQTTGateway"'
   ;'-DZgatewayIR="IR"'
 upload_protocol = espota
-upload_port = 192.168.3.5
+upload_port = 192.168.3.90
 upload_flags =
   --auth=OTAPASSWORD
   --port=8266
