--- a/platformio.ini
+++ b/platformio.ini
@@ -39,7 +39,7 @@ extra_configs =
 ;default_envs = esp32dev-pilight-somfy-cc1101
 ;default_envs = esp32dev-weatherstation
 ;default_envs = esp32dev-ir
-;default_envs = esp32dev-ble
+default_envs = esp32dev-ble
 ;default_envs = esp32dev-ble-cont
 ;default_envs = esp32feather-ble
 ;default_envs = esp32-lolin32lite-ble
@@ -337,7 +337,11 @@ build_flags =
   '-DZgatewayBT="BT"'
   '-DLED_RECEIVE=2'
   '-DLED_RECEIVE_ON=0'
+  '-DBLE_HCI_ADV="hci"'
+  '-DTimeBtwRead=1000'
   '-DGateway_Name="OpenMQTTGateway_ESP32_BLE"'
+upload_protocol = esptool
+
 
 [env:esp32dev-ble-cont]
 platform = ${com.esp32_platform}
