--- a/platformio.ini
+++ b/platformio.ini
@@ -65,7 +65,7 @@ extra_configs =
 ;default_envs = heltec-wifi-lora-32-868
 ;default_envs = heltec-wifi-lora-32-915
 ;default_envs = heltec-rtl_433
-;default_envs = nodemcuv2-rf
+default_envs = nodemcuv2-rf
 ;default_envs = nodemcuv2-rf-cc1101
 ;default_envs = nodemcuv2-somfy-cc1101
 ;default_envs = rf-wifi-gateway
@@ -1137,17 +1137,31 @@ board_build.flash_mode = dout
 
 [env:nodemcuv2-rf]
 platform = ${com.esp8266_platform}
-board = nodemcuv2
+board = esp_wroom_02
 lib_deps =
   ${com-esp.lib_deps}
   ${libraries.wifimanager8266}
   ${libraries.rc-switch}
+  ${libraries.irremoteesp}
+  ${libraries.ahtx0}
   ${libraries.esp8266_mdns}
+  ; ${libraries.unifiedsensor}
+  ; ${libraries.dht}
 build_flags =
   ${com-esp.build_flags}
-  '-DZgatewayRF="RF"'
-  '-DGateway_Name="OpenMQTTGateway_ESP8266_RF"'
+  '-DZsensorAHTx0="AHTx0"'
+  ;  '-DZgatewayRF="RF"'
+  ; '-DZactuatorPWM="PWM"'
+  ; '-DZactuatorONOFF="ONOFF"'
+  ; '-DZsensorGPIOInput="GPIOInput"'
+  '-DGateway_Name="OMG-ibox1"'
 board_build.flash_mode = dout
+upload_protocol = esptool
+; upload_protocol = espota
+; upload_port = 192.168.3.12
+; upload_flags =
+;   --auth=OTAPASSWORD
+;   --port=8266
 
 [env:nodemcuv2-rf-cc1101]
 platform = ${com.esp8266_platform}
