--- a/platformio.ini
+++ b/platformio.ini
@@ -1149,19 +1149,19 @@ lib_deps =
   ; ${libraries.dht}
 build_flags =
   ${com-esp.build_flags}
-  '-DZsensorAHTx0="AHTx0"'
+  ; '-DZsensorAHTx0="AHTx0"'
   ;  '-DZgatewayRF="RF"'
   ; '-DZactuatorPWM="PWM"'
   ; '-DZactuatorONOFF="ONOFF"'
   ; '-DZsensorGPIOInput="GPIOInput"'
   '-DGateway_Name="OMG-ibox1"'
 board_build.flash_mode = dout
-upload_protocol = esptool
-; upload_protocol = espota
-; upload_port = 192.168.3.12
-; upload_flags =
-;   --auth=OTAPASSWORD
-;   --port=8266
+; upload_protocol = esptool
+upload_protocol = espota
+upload_port = 192.168.3.143
+upload_flags =
+  --auth=OTAPASSWORD
+  --port=8266
 
 [env:nodemcuv2-rf-cc1101]
 platform = ${com.esp8266_platform}
